manifests/base/istio/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "kubeflow.ixi-drive.com"
